# KITTYSPY

./: build.gradle.kts  debug.keystore.base64  gradle.properties  metadata.json  settings.gradle.kts
app/: build.gradle.kts  obfuscation_dictionary.txt  proguard-rules.pro
app/src/androidTest/java/com/kittyspace/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: KittyMemory.cpp
app/src/main/java/com/kittyspace/: FloatingMenuContent.kt  FloatingMenuService.kt  InstalledAppInfo.kt  KittyDumpService.kt  KittyViewModel.kt  MainActivity.kt  NativeDumper.kt  NativeManager.kt
app/src/main/java/com/kittyspace/data/repository/: KittyRepository.kt
app/src/main/java/com/kittyspace/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/kittyspace/: ExampleRobolectricTest.kt  ExampleUnitTest.kt
gradle/: libs.versions.toml
repo/: README.md
repo/.build-outputs/: app-debug.apk
repo/app/: build.gradle.kts
repo/app/src/main/cpp/: CMakeLists.txt  Dobby.cpp  Dobby.h  KittyMemory.h  native-lib.cpp
repo/app/src/main/java/com/kittyspace/: FloatingMenuService.kt  MainActivity.kt
repo/app/src/main/java/com/kittyspace/data/database/: KittyAppDao.kt  KittyAppEntity.kt  KittyDatabase.kt
repo/app/src/main/java/com/kittyspace/dumper/: KittyDumperEngine.kt
repo/app/src/main/java/com/kittyspace/ui/theme/: Color.kt  Type.kt
repo/app/src/main/res/drawable/: ic_launcher_background.xml
repo/app/src/test/java/com/kittyspace/: GreetingScreenshotTest.kt
